fix-bug menu, truncate name

--- a/app/assets/stylesheets/home/style.css.scss
+++ b/app/assets/stylesheets/home/style.css.scss
@@ -539,7 +539,7 @@ body {
     h4{
       line-height: 25px;
       color: #0072BD;
-      font-size: 16px;
+      font-size: 15px;
       font-weight: bold;
       margin-bottom: 0px;
       text-align: center;
@@ -550,7 +550,7 @@ body {
         -webkit-transition: all 0.5s ease-out;
         -o-transition: all 0.5s ease-out;
         -moz-transition: all 0.5s ease-out;
-      } 
+      }
     }
 
   }
@@ -604,7 +604,7 @@ body {
 	font-family: 'linotte-regular';
 	color:#CC3636;
 }
-#show-item .grid_1_of_4.images_1_of_4{ 
+#show-item .grid_1_of_4.images_1_of_4{
   width: 21.5%;
   img { height:225px}
   .show-details { left:38px;}
